--- a/index.html
+++ b/index.html
@@ -97,11 +97,11 @@
  <div class="secondoparagrafo">
     <div class="container-main">  
     <h3 class="titolo02">Ambiti di utilizzo</h3>
-<p class= "testo02">Questo approccio è ampiamente utilizzato in diversi ambiti, tra cui la simulazione di fenomeni naturali, l'analisi numerica, la programmazione informatica, i videogiochi, il creative coding e la crittografia. </p>
+<p class= "testo02">I numeri casuali e pseudo-casuali, sono ampiamente utilizzati in vari ambiti, quali la simulazione di fenomeni naturali, l'analisi numerica, la programmazione informatica, i videogiochi, il creative coding e la crittografia. Questo approccio trova applicazioni in molteplici settori della scienza e della tecnologia. Tra questi vi sono la crittografia (per la generazione di chiavi e password), la simulazione tramite computers, il metodo MonteCarlo per il calcolo numerico (utile, ad esempio, nel calcolo di integrali complessi non trattabili con metodi classici), i giochi d’azzardo online (come dadi, carte, roulette e casinò online), gli algoritmi probabilistici (come l’algoritmo di Miller-Rabin per la verifica della primalità di un numero) e la programmazione dei videogiochi. </p>
 </div>  <!-- chiusura secondo paragrafo-->
 </div> <!-- chiusura main cont-->
 
-
+<hr class="hr_filetto">
 
 
 
