--- a/assets/js/dado_reale/index_reale.html
+++ b/assets/js/dado_reale/index_reale.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="sketch_reale.js"></script>
+    <script src="sketch_reale.js">
+
+        
+    </script>
 </body>
 </html>
