--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
        <h1 id="pseudo_random" class="titolo_header">Algoritmi Pseudo Random</h1>
         <h2>Un algoritmo pseudocasuale genera numeri che sembrano casuali, ma che in realtà sono il risultato di un sistema deterministico.</h2> 
         <h3></h3>
-        <img src="/assets/image/schema_01_b.png" alt="immagine schema 01" style="width: 100%; height: auto;" class="immagine01">
-
+        <img src="./assets/image/schema_01_b.png" alt="immagine schema 01" style="width: 100%; height: auto;" class="immagine01">
         <div class="requisiti">
             <div class="container-main">  
             <h3 class="titolo01">Requisiti per sequenze casuali</h3>
